# video2note

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
config/: base_config.yaml  bilibili_cookies.txt  config.example  config.yaml  cookies.txt   providers.yaml  providers.yaml.bak
src/: __init__.py  downloader.py  main.py  notion_sync.py  summarizer.py  test_utils.py  transcriber.py  utils.py
src/video2note/: cli.py
src/video2note/config_manager/: loader.py  validator.py
src/video2note/core/: exceptions.py  pipeline.py  runner.py
src/video2note/downloader/: base.py  bilibili_downloader.py  youtube_downloader.py
src/video2note/notion/: base.py  md_parser.py  page_manager.py  sync_notion.py
src/video2note/summarizer/: base.py  deepseek_summarizer.py  doubao_summarizer.py  local_summarizer.py  openai_summarizer.py  qwen_summarizer.py  rule_summarizer.py
src/video2note/transcriber/: base.py  local_whisper.py  mock_transcriber.py  openai_transcriber.py  qwen_transcriber.py
src/video2note/types/: note.py  transcript.py  video.py
src/video2note/utils/: file_utils.py  logger.py
tests/: downloader.py  main.py  notion_sync.py  summarizer.py  transcriber.py
